cmake_minimum_required(VERSION 3.15)
project(TP3)

set(CMAKE_CXX_STANDARD 17)
set(Qt5_DIR "~/Qt/5.14.1/clang_64/lib/cmake/Qt5")
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
add_executable(TP3 main.cpp mainWindow_Exo2.cpp mainWindow_Exo1.cpp)
target_link_libraries(TP3 Qt5::Core Qt5::Widgets)